# django_rest

./: .coverage  .env.sample  .gitignore  Dockerfile  README.md  data.json  docker-compose.yml  pyproject.toml  requirements.txt
config/: asgi.py  config_parse.py  settings.py  urls.py  wsgi.py
courses/: admin.py  models.py  paginators.py  permissions.py  regexp.py  serializers.py  services.py  stripe_api_core.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_video_link.py  0003_rename_descriptons_lesson_description.py  0004_alter_lesson_course.py  0005_course_owner_lesson_owner.py  0006_alter_lesson_video_link.py  0007_subscribe.py  0008_alter_subscribe_course.py  0009_alter_course_options_alter_lesson_options_and_more.py  0010_alter_course_course_name_alter_course_course_preview_and_more.py  0011_course_amount_lesson_amount_and_more.py  0012_alter_course_amount_alter_lesson_amount.py
django_rest_framework/: settings.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_city_user_phone.py  0003_alter_user_avatar.py  0004_payments.py  0005_alter_payments_pay_course_alter_payments_pay_lesson.py  0006_alter_payments_payment_amount.py  0007_alter_payments_payment_method.py  0008_alter_payments_payment_amount.py  0009_alter_payments_options_alter_payments_user.py  0010_alter_payments_date_of_pay_alter_payments_pay_course_and_more.py  0011_payments_status.py  0012_payments_id_session.py  (+2 more)
(+2 files in other folders)
